--- a/index.html
+++ b/index.html
@@ -1301,10 +1301,15 @@
                             </div>
 
                     </div>
-
-
                 </div>
             </div>
+
+            <section id="foterborder">
+                <div class="footerend">
+                    <img src="./assets/images/Group (2).svg" alt="">
+                    <p>Copyright Rimel 2022. All right reserved</p>
+                </div>
+            </section>
         </footer>
          
     </body>
