6-page cart end

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                         <img src="./assets/images/Component 2.svg" alt="">
                     </div>
                     <div class="likelogouser">
-                        <img class="likelogouser" src="./assets/images/Wishlist.svg" alt="like">
-                        <img class="likelogouser" src="./assets/images/Cart1 (1).svg" alt="korzinka">
+                        <a href="./pages/Wishlist.html"><img class="likelogouser" src="./assets/images/Wishlist.svg" alt="like"></a>
+                    <a href="./pages/cardpag6.html"><img class="likelogouser" src="./assets/images/Cart1 (1).svg" alt="korzinka"></a>
                        <div>
                          <ul></ul> 
                          <img class="likelogouser" src="./assets/images/user.svg" alt="user">
