--- a/pages/Login.html
+++ b/pages/Login.html
@@ -129,7 +129,7 @@
                         <input type="text" placeholder="Password">
                     </div>
                     <div class="btnpg3">
-                    <button>Log In</button>
+                  <a href="https://echo.htmlacademy.ru"><button>Log In</button></a>
 
                     <div class="logins">
                         <p>Forget Password?</p>
