--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -130,7 +130,7 @@
                         <input type="text" placeholder="Password">
                     </div>
                     <div class="btnc1">
-                    <button>Create Account</button>
+                   <a href="https://echo.htmlacademy.ru"><button>Create Account</button></a>
                     </div>
                     <div class="btnc2">
                         <button> <img src="../assets/images/Icon-Google.svg" alt=""> <p> Sign up with Google </p></button>
