exam end (tugadi)

--- a/pages/Account.html
+++ b/pages/Account.html
@@ -87,7 +87,7 @@
                     <a href="../pages/cardpage.html"><img class="likelogouser" src="../assets/images/Cart1 (1).svg" alt="korzinka"></a>
                        <div>
                          <ul></ul> 
-                         <img class="likelogouser" src="../assets/images/user.svg" alt="user">
+                         <a href="./Account.html"><img class="likelogouser" src="../assets/images/user.svg" alt="user"></a>
                          </div>
                     </div>
                 </ul>
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="homemy_wrap">
                 <div class="textstwo">
-                    <p>Home /   </p>
+                    <a href="../index.html">Home /</a>
                     <span>My Account</span>
                 </div>
                 <div class="welmdrimel">
