--- a/pages/CheckOut.html
+++ b/pages/CheckOut.html
@@ -116,11 +116,11 @@
               /></a>
               <div>
                 <ul></ul>
-                <img
-                  class="likelogouser"
-                  src="../assets/images/useruserwhit.svg"
-                  alt="user"
-                />
+               <a href="./Account.html"> <img
+                class="likelogouser"
+                src="../assets/images/useruserwhit.svg"
+                alt="user"
+              /></a>
               </div>
             </div>
           </ul>
@@ -137,19 +137,19 @@
         <div class="container">
           <div class="checkout_texts">
             <p>
-              <a href="#">Account</a>
+              <a href="./Account.html">Account</a>
               <span class="slew">/</span>
             </p>
             <p>
-              <a href="#">My Account</a>
+              <a href="./Account.html">My Account</a>
               <span class="slew">/</span>
             </p>
             <p>
-              <a href="#">Product</a>
+              <a href="./Productpage.html">Product</a>
               <span class="slew">/</span>
             </p>
             <p>
-              <a href="#">View Cart</a>
+              <a href="./cardpage.html">View Cart</a>
               <span class="slew">/</span>
             </p>
 
