--- a/pages/Login.html
+++ b/pages/Login.html
@@ -109,6 +109,8 @@
 
     <main>
     <section id="page2sec1">
+      <div class="container">
+      <form action="https://echo.htmlacademy.ru">
             <div class="page2_wrap">
                 <div class="content1wrap">
                     <img src="../assets/images/dl.beatsnoop 1.png" alt="">
@@ -129,7 +131,7 @@
                         <input type="text" placeholder="Password">
                     </div>
                     <div class="btnpg3">
-                  <a href="https://echo.htmlacademy.ru"><button>Log In</button></a>
+                  <button type="https://echo.htmlacademy.ru">Log In</button>
 
                     <div class="logins">
                         <p>Forget Password?</p>
@@ -151,6 +153,8 @@
 
 
 
+          </form>
+        </div>
     </section>
 </main>
          <!--------------------- section footer start ---------------------->
