--- a/pages/Wishlist.html
+++ b/pages/Wishlist.html
@@ -84,10 +84,10 @@
                     </div>
                     <div class="likelogouser">
                         <a href="../pages/Wishlist.html"><img class="likelogouser" src="../assets/images/Wishlistlike4.svg" alt="like"></a>
-                        <img class="likelogouser" src="../assets/images/Cart1 (1).svg" alt="korzinka">
+                       <a href="./cardpage.html"> <img class="likelogouser" src="../assets/images/Cart1 (1).svg" alt="korzinka"></a>
                        <div>
                          <ul></ul> 
-                         <img class="likelogouser" src="../assets/images/useruserwhit.svg" alt="user">
+                        <a href="./Account.html"> <img class="likelogouser" src="../assets/images/useruserwhit.svg" alt="user"></a>
                          </div>
                     </div>
                 </ul>
