--- a/pages/cardpage.html
+++ b/pages/cardpage.html
@@ -77,11 +77,11 @@
                     </div>
                     <div class="likelogouser">
                         <a href="../pages/Wishlist.html"><img class="likelogouser" src="../assets/images/Wishlistlike4.svg" alt="like"></a>
-                     <a href="./cardpag6.html"><img class="likelogouser" src="../assets/images/Cart1 with buychatkorzinkA.svg" alt="korzinka"></a>
+                     <a href="./cardpage.html"><img class="likelogouser" src="../assets/images/Cart1 with buychatkorzinkA.svg" alt="korzinka"></a>
                        <div>
                          <ul></ul> 
-                         <img class="likelogouser" src="../assets/images/useruserwhit.svg" alt="user">
-                         </div>
+                        <a href="./Account.html"><img class="likelogouser" src="../assets/images/useruserwhit.svg" alt="user"></a> 
+                        </div>
                     </div>
                 </ul>
                 </nav>
@@ -185,7 +185,7 @@
                                 <span>$1750</span>
                             </p>
                             <div>
-                                <button>Procees to checkout</button>
+                               <a href="./CheckOut.html"> <button>Procees to checkout</button></a>
                             </div>
 
                         </div>
