--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -109,12 +109,14 @@
 
     <main>
     <section id="page2sec1">
+      <div class="container">
             <div class="page2_wrap">
                 <div class="content1wrap">
                     <img src="../assets/images/dl.beatsnoop 1.png" alt="">
                 </div>
 
                 <div class="container">
+                  <form action="https://echo.htmlacademy.ru">
                     
                     <div class="content2wrap">
                         <h1>Create an account</h1>
@@ -130,7 +132,7 @@
                         <input type="text" placeholder="Password">
                     </div>
                     <div class="btnc1">
-                   <a href="https://echo.htmlacademy.ru"><button>Create Account</button></a>
+                   <button type="https://echo.htmlacademy.ru">Create Account</button>
                     </div>
                     <div class="btnc2">
                         <button> <img src="../assets/images/Icon-Google.svg" alt=""> <p> Sign up with Google </p></button>
@@ -141,6 +143,7 @@
                     <a href="./Login.html">Log in</a>
                 </div>
                     </div>
+                  </form>
                 </div>
 
 
@@ -152,6 +155,7 @@
 
 
 
+          </div>
     </section>
 </main>
          <!--------------------- section footer start ---------------------->
